--- a/.github/workflows/workflow_setup-java-v1.yml
+++ b/.github/workflows/workflow_setup-java-v1.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [ 17.0.3, 18, 19-ea ]
+        java: [ 17.0.3, 18 ]
       fail-fast: false
       max-parallel: 4
     name: Build and test App on JDK ${{ matrix.java }}, ${{ matrix.os }}
