--- a/.github/workflows/workflow_setup-java-v1_deploy.yml
+++ b/.github/workflows/workflow_setup-java-v1_deploy.yml
@@ -31,6 +31,9 @@ jobs:
           USERNAME: ${{ github.actor }}
           PASSWORD: ${{ secrets.GITHUB_TOKEN }}
         run: gradle build
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2  
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
