--- a/.github/workflows/workflow_setup-java-v1_deploy.yml
+++ b/.github/workflows/workflow_setup-java-v1_deploy.yml
@@ -32,8 +32,9 @@ jobs:
           PASSWORD: ${{ secrets.GITHUB_TOKEN }}
         run: gradle build
       - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v2  
+        uses: docker/setup-buildx-action@v1
+        with:
+          version: v0.7.0
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
