Added github action to build and push docker image 2

--- a/.github/workflows/workflow_setup-java-v1_deploy.yml
+++ b/.github/workflows/workflow_setup-java-v1_deploy.yml
@@ -37,7 +37,6 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags: carldea/demo-api:latest
+        run: |
+        docker image build --tag carldea/demo-api:latest .
+        docker push carldea/demo-api:latest
