--- a/.github/workflows/workflow_setup-java-v1_deploy.yml
+++ b/.github/workflows/workflow_setup-java-v1_deploy.yml
@@ -16,6 +16,9 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         java: [ 17.0.3 ]
+        java_image: ['17.0.3-17.34.19-jre-headless']
+        #java: [ 17.0.4 ]
+        #java_image: ['17-jre-headless']
       fail-fast: false
       max-parallel: 4
     name: Build and Deploy image to DockerHub on JDK ${{ matrix.java }}, ${{ matrix.os }}
@@ -42,5 +45,5 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Build and push
         run: |
-        docker image build --tag carldea/demo-api:latest .
+        docker image build --build-arg java_image=${{ matrix.java_image }} --tag carldea/demo-api:latest .
         docker push carldea/demo-api:latest
